# starnest

./: README.md  package.json  pnpm-lock.yaml  tsconfig.json  uno.config.ts  vite.config.ts
src/: App.vue  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/db/: config.rs  sqlite.rs
src-tauri/src/handlers/: auth_handler.rs  category_handler.rs  collection_handler.rs  config_handler.rs  mod.rs  note_handler.rs  repo_handler.rs
src-tauri/src/infrastructure/: mod.rs
src-tauri/src/infrastructure/external_api/: github_client.rs  mod.rs
src-tauri/src/infrastructure/utils/: async_task.rs  file.rs  hash.rs  mod.rs
src-tauri/src/models/: config.rs  dto.rs  entity.rs  mod.rs
src-tauri/src/repos/: auth_repo.rs  category_repo.rs  collection_repo.rs  config_repo.rs  mod.rs  note_repo.rs  repo_repo.rs  traits.rs
src-tauri/src/services/: activity_service.rs  auth_service.rs  category_service.rs  collection_service.rs  config_service.rs  mod.rs  note_service.rs  repo_service.rs  traits.rs
src/Layout/: index.vue
src/api/: auth.ts  category.ts  collection.ts  config.ts  index.ts  note.ts  repo.ts
src/assets/: color.json
src/components/: ButtonGroup.vue  CreateNoteModal.vue  LoadingSpinner.vue  Message.vue  Modal.vue  MyInput.vue  MyInputNumber.vue  NoteEditor.vue  Notification.vue  NotificationContainer.vue  SearchModal.vue  SwitchToggle.vue  VirtualScroll.vue
src/composables/: useDebounce.ts  useMessage.ts  useModal.ts  useSearch.ts  (+3 more)
(+78 files in other folders)
