[package]
name = "starnest"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "starnest_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json", "gzip"] }
dirs = "5"
open = "5"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio", "chrono", "macros", "migrate"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
base64 = "0.21"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
sha2 = "0.10"
hex = "0.4"
regex = "1"
percent-encoding = "2"
async-trait = "0.1.75"
once_cell = "1.18.0"
tauri-plugin-os = "2"
backtrace = "0.3"
futures = "0.3"

